Fixing image alt texts and some website formatting issues

--- a/budget.html
+++ b/budget.html
@@ -10,17 +10,17 @@
 </head>
 
 <div id="resources-box" class="ai2html" style="width:100%">
-	<div id="resources" class="artboard" style="max-width:100%;max-height:3354px" data-aspect-ratio="0.598" data-min-width="0">
+	<div id="resources" class="artboard" style="max-width:100%;max-height:3054px" data-aspect-ratio="0.598" data-min-width="0">
 
 		<div class="header blue1"></div>
-		<div style="padding: 0 0 3094px 0;"></div>
+		<div style="padding: 0 0 2794px 0;"></div>
 		<div class="footer blue1"> </div>
 
 		<a href="https://maiam6242.github.io/braille-printer/">
 				<img class="logo" alt="Portabraille Printer Logo" src="Website Graphics\Logo.png"/>
 		</a>
 
-    <div class="dotdotdot" style="top:21%;left:50%;margin-left:-55px">
+    <div class="dotdotdot" style="top:88%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -28,8 +28,8 @@
       <div class="dot"></div>
     </div>
 
-    <img class="portrait" alt="Budget for Portabraille Printer" style="width:60%;height:auto;top: 13%;left:50%;margin-left:-30%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\budget.jpg"/></img>
-    
+    <img class="portrait" alt="Budget for Portabraille Printer" style="width:60%;height:auto;top: 13%;left:50%;margin-left:-30%; outline:0.5vw solid black; outline-offset: 1vw" src="Website Graphics\budget.jpg"/></img>
+
     <div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:860px;width:81px;">
 			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/instructions.html">instructions</a>
 		</div>
@@ -68,27 +68,26 @@
 		</div>
 
     <div class="Layer_1 aiAbs" style="top:91.5725%;left:50.0044%;margin-left:-36.2055%;width:72.4109%;">
-      <p class="pstyle1">Our total estimated cost of materials for this printer is $539.69. For this project, we spent $271.60, $21.60 over our allotted budget. The other materials did not cost us anything or were obtained for free.
-    </p>
+      <p class="pstyle1">Our total estimated cost of materials for this printer is $539.69. For this project, we spent $237.63. The other materials did not cost us anything or were obtained for free.</p>
     </div>
 
     <div style="width:1000px;left:50%;margin-left:-500px">
-  		<div class="Layer_1 aiAbs aiPointText" style="top:3314px;margin-top:-17.5px;left:9.4243%;width:81px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:3014px;margin-top:-17.5px;left:9.4243%;width:81px;">
   			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/instructions.html">instructions</a>
   		</div>
-      <div class="Layer_1 aiAbs aiPointText" style="top:3314px;margin-top:-17.5px;left:27%;width:81px;">
+      <div class="Layer_1 aiAbs aiPointText" style="top:3014px;margin-top:-17.5px;left:27%;width:81px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/system.html">system</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:3314px;margin-top:-17.5px;left:42%;width:73px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:3014px;margin-top:-17.5px;left:42%;width:73px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/process.html">process</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:3314px;margin-top:-17.5px;left:57%;width:160px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:3014px;margin-top:-17.5px;left:57%;width:160px;">
           <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/blog.html">blog</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:3314px;margin-top:-17.5px;left:69%;width:133px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:3014px;margin-top:-17.5px;left:69%;width:133px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/resources.html">resources</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:3314px;margin-top:-17.5px;left:85%;width:110px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:3014px;margin-top:-17.5px;left:85%;width:110px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
   		</div>
     </div>
