--- a/design.html
+++ b/design.html
@@ -33,7 +33,7 @@
     <div class="circle675 blue2" style="left:10%;top:32%"></div>
     <div class="aiAbs" style="align:center;height:550px;width:880px;left:50%;margin-left:-440px;top:33%">
       <div class="frame" style="height:100%;width:100%;"></div>
-      <img class="portrait" alt="Portabraille Interface" style="width:94%;height:91%;top:30px;left:50%;margin-left:-46.5%" src="Website Graphics\designInterface.jpg"/></img>
+      <img class="portrait" alt="The Portabraille Printer Interface" style="width:94%;height:91%;top:30px;left:50%;margin-left:-46.5%" src="Website Graphics\designInterface.jpg"/></img>
     </div>
 
     <div class="circle450 blue3" style="right:55%;top:72%"></div>
@@ -41,7 +41,7 @@
     <div class="circle675 blue2" style="right:10%;top:65%"></div>
     <div class="aiAbs" style="align:center;height:550px;width:880px;left:50%;margin-left:-440px;top:66%">
       <div class="frame" style="height:100%;width:100%;"></div>
-      <img class="portrait" alt="Portabraille printing" style="width:94%;height:91%;top:30px;left:50%;margin-left:-46.5%" src="Website Graphics\designPrint.jpg"/></img>
+      <img class="portrait" alt="The Portabraille Printer printing a sheet of braille" style="width:94%;height:91%;top:30px;left:50%;margin-left:-46.5%" src="Website Graphics\designPrint.jpg"/></img>
     </div>
 
     <div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:860px;width:81px;">
