--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <div class="circle250 blue1" style="left:72%;top:9.5%"></div>
     <div class="circle675 blue2" style="left:10%;top:9.5%"></div>
     <div class="aiAbs" style="align:center;height:13.3%;width:71.33%;left:50%;margin-left:-30%;top:10.2%">
-      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
-      <img class="portrait" alt="The Portabraille Printer!" style="width:80%;height:auto;top:25px;left:50%;margin-left:-47%;outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\homepagePrinter.jpg"/></img>
+      <img class="portrait" alt="The Portabraille Printer, outside" style="width:80%;height:auto;top:25px;left:50%;margin-left:-47%;outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\homepagePrinter.jpg"/></img>
     </div>
 
     <div class="dotdotdot" style="top:27.4%;left:50%;margin-left:-55px">
@@ -40,8 +39,7 @@
     <div class="circle300 blue3" style="left:3%;top:33.7%"></div>
     <div class="circle150 blue1" style="left:40%;top:36.1%"></div>
     <div class="aiAbs" style="align:center;height:7.8%;width:43%;left:6%;top:30.6%">
-      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
-      <img class="portrait" alt="The Portabraille Printer!" style="width:80%;height:auto;top:20px;left:50%;margin-left:-46.5%;outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\homepagePunch.jpg"/></img>
+      <img class="portrait" alt="The Portabraille Printer solenoid tips punching a piece of paper" style="width:80%;height:auto;top:20px;left:50%;margin-left:-46.5%;outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\homepagePunch.jpg"/></img>
     </div>
 
     <div class="dotdotdot" style="top:42%;left:50%;margin-left:-55px">
@@ -56,24 +54,21 @@
     <div class="circle400 blue2" style="right:3%;top:43.5%"></div>
     <div class="circle150 blue1" style="right:40%;top:44%"></div>
     <div class="aiAbs" style="align:center;height:7.8%;width:43%;right:6%;top:45.8%">
-      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
-      <img class="portrait" alt="The Portabraille Printer!" style="width:80%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\homepageInterface.jpg"/></img>
+      <img class="portrait" alt="The Portabraille Printer interface" style="width:80%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\homepageInterface.jpg"/></img>
     </div>
 
     <div class="circle300 blue3" style="left:33%;top:62%"></div>
     <div class="circle400 blue2" style="left:3%;top:57%"></div>
     <div class="circle150 blue1" style="left:6%;top:65%"></div>
     <div class="aiAbs" style="align:center;height:7.8%;width:43%;left:6%;top:60.3%">
-      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
-      <img class="portrait" alt="The Portabraille Printer!" style="width:80%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\homepageSolenoids.jpg"/></img>
+      <img class="portrait" alt="The bank of mounted solenoids on the Portabraille Printer" style="width:80%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\homepageSolenoids.jpg"/></img>
     </div>
 
     <div class="circle400 blue2" style="right:3%;top:74.3%"></div>
     <div class="circle300 blue3" style="right:3%;top:71%"></div>
     <div class="circle150 blue1" style="right:40%;top:73%"></div>
     <div class="aiAbs" style="align:center;height:7.8%;width:43%;right:6%;top:73.5%">
-      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
-      <img class="portrait" alt="The Portabraille Printer!" style="width:80%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\homepageFreshBraille.jpg"/></img>
+      <img class="portrait" alt="The Portabraille Printer printing a sheet of braille" style="width:80%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\homepageFreshBraille.jpg"/></img>
     </div>
 
     <div class="dotdotdot" style="top:84.7%;left:50%;margin-left:-55px">
