--- a/instructions.html
+++ b/instructions.html
@@ -10,17 +10,17 @@
 </head>
 
 <div id="instructions-box" class="ai2html">
-	<div id="instructions" class="artboard" style="max-width: 100%;max-height: 3942px" data-aspect-ratio="0.411" data-min-width="0">
+	<div id="instructions" class="artboard" style="max-width: 100%;max-height: 3642px" data-aspect-ratio="0.411" data-min-width="0">
 
 		<div class="header blue1"></div>
-		<div style="padding: 0 0 3682px 0;"></div>
+		<div style="padding: 0 0 3382px 0;"></div>
 		<div class="footer blue1"> </div>
 
 		<a href="https://maiam6242.github.io/braille-printer/">
 				<img class="logo" alt="Portabraille Printer Logo" src="Website Graphics\Logo.png"/>
 		</a>
 
-    <div class="dotdotdot" style="top:12.2%;left:50%;margin-left:-55px">
+    <div class="dotdotdot" style="top:12.7%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -28,20 +28,18 @@
       <div class="dot"></div>
     </div>
 
-    <div class="circle300 blue3" style="left:31%;top:20%"></div>
-    <div class="circle400 blue2" style="left:3%;top:15%"></div>
-    <div class="circle150 blue1" style="left:6%;top:23%"></div>
-    <div class="aiAbs" style="align:center;height:9%;width:43%;left:8%;top:15.5%">
-      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
-      <img class="portrait" alt="Picture of the Portabraille interface" style="width:94%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\instructions1.jpg"/></img>
+    <div class="circle300 blue3" style="left:33%;top:23%"></div>
+    <div class="circle400 blue2" style="left:3%;top:14%"></div>
+    <div class="circle150 blue1" style="left:6%;top:26%"></div>
+    <div class="aiAbs" style="align:center;height:9%;width:43%;left:8%;top:16.5%">
+      <img class="portrait" alt="Picture of the Portabraille Printer interface" style="width:94%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\instructions1.jpg"/></img>
     </div>
 
-    <div class="circle400 blue2" style="right:3%;top:65%"></div>
-    <div class="circle300 blue3" style="right:3%;top:60.5%"></div>
-    <div class="circle150 blue1" style="right:40%;top:70%"></div>
-    <div class="aiAbs" style="align:center;height:9%;width:43%;right:8%;top:61.5%">
-      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
-      <img class="portrait" alt="Picture of the Portabraille interface" style="width:90%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\instructions2.jpg"/></img>
+    <div class="circle400 blue2" style="right:3%;top:64%"></div>
+    <div class="circle300 blue3" style="right:3%;top:59.5%"></div>
+    <div class="circle150 blue1" style="right:40%;top:69%"></div>
+    <div class="aiAbs" style="align:center;height:9%;width:43%;right:8%;top:60.5%">
+      <img class="portrait" alt="The Portabraille Printer without the outer enclosure" style="width:90%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\instructions2.jpg"/></img>
     </div>
 
     <div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:860px;width:81px;">
@@ -77,15 +75,15 @@
       <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
 		</div>
 
-    <div id="ai0-1" class="Layer_1 aiAbs" style="top:6.5199%;left:50.0012%;margin-left:-32.6429%;width:65.2858%;">
+    <div id="ai0-1" class="Layer_1 aiAbs" style="top:7.5199%;left:50.0012%;margin-left:-32.6429%;width:65.2858%;">
       <p class="pstyle0">Ready to turn your document into some beautiful braille? Follow the instructions below to get started with the Portabraille Printer!</p>
     </div>
-    <div id="ai0-2" class="Layer_1 aiAbs" style="top:15.6529%;left:56.6751%;width:36.7854%;">
+    <div id="ai0-2" class="Layer_1 aiAbs" style="top:17.3529%;left:56.6751%;width:36.7854%;">
       <p class="pstyle1">First, turn the printer on by flipping the power switch. </p>
       <p>&nbsp;</p>
       <p>You can find the power switch attached to the 8.5 inch by 4.5 inch by 2 inch metal box which connects to the printer via the two wires which come out of the back (on the same side as the place where paper is inserted). </p>
     </div>
-    <div id="ai0-3" class="Layer_1 aiAbs" style="top:29.6061%;left:10.3839%;width:79.2046%;">
+    <div id="ai0-3" class="Layer_1 aiAbs" style="top:31.6061%;left:10.3839%;width:79.2046%;">
       <p class="pstyle2" style="text-align:center">Next, you&rsquo;ll need to you&rsquo;ll need to upload a file to the printer. </p>
       <p>&nbsp;</p>
       <p class="pstyle3">Note that you must insert your file as a .txt file. If you are using a word document or something similar, you can choose to save your document as a .txt file using your word processor&rsquo;s &ldquo;Save as&rdquo; menu.</p>
@@ -95,7 +93,7 @@
       <p class="pstyle3">You can also wirelessly upload your file. If you&rsquo;d like to do that, you need to connect your device to the Portabraille Wi-Fi network. The password is TeamDotDotDot! and you can connect to the network like you would any other new Wi-Fi network. Usually, this means going into your Wi-Fi settings and selecting the Portabraille network. Once you are on the network (this process can take up to around 30 seconds), to get to the Portabraille Portal interface, type 10.3.141.1:5000 into your browser search bar. In the portal, you can upload and submit your text file!</p>
       <p>&nbsp;</p>
     </div>
-    <div id="ai0-4" class="Layer_1 aiAbs" style="top:62.6625%;right:55.914%;width:38.691%;">
+    <div id="ai0-4" class="Layer_1 aiAbs" style="top:62.1625%;right:55.914%;width:38.691%;">
       <p class="pstyle4">Almost ready!  Prepare your paper and check the READY TO PRINT indicator.</p>
       <p>&nbsp;</p>
       <p class="pstyle5">If it is lit up, that means the printer is ready to print. The printer will also say &ldquo;The printer is ready to print&rdquo; out loud when it is ready to print.</p>
@@ -113,22 +111,22 @@
     </div>
 
     <div style="width:1000px;left:50%;margin-left:-500px">
-  		<div class="Layer_1 aiAbs aiPointText" style="top:3902px;margin-top:-17.5px;left:9.4243%;width:81px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:3602px;margin-top:-17.5px;left:9.4243%;width:81px;">
   			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/instructions.html">instructions</a>
   		</div>
-      <div class="Layer_1 aiAbs aiPointText" style="top:3902px;margin-top:-17.5px;left:27%;width:81px;">
+      <div class="Layer_1 aiAbs aiPointText" style="top:3602px;margin-top:-17.5px;left:27%;width:81px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/system.html">system</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:3902px;margin-top:-17.5px;left:42%;width:73px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:3602px;margin-top:-17.5px;left:42%;width:73px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/process.html">process</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:3902px;margin-top:-17.5px;left:57%;width:160px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:3602px;margin-top:-17.5px;left:57%;width:160px;">
           <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/blog.html">blog</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:3902px;margin-top:-17.5px;left:69%;width:133px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:3602px;margin-top:-17.5px;left:69%;width:133px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/resources.html">resources</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:3902px;margin-top:-17.5px;left:85%;width:110px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:3602px;margin-top:-17.5px;left:85%;width:110px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
   		</div>
     </div>
