--- a/process.html
+++ b/process.html
@@ -24,8 +24,7 @@
     <div class="circle300 blue3" style="left:3%;top:31%"></div>
     <div class="circle150 blue1" style="left:40%;top:41%"></div>
     <div class="aiAbs" style="align:center;height:26.5%;width:38.6%;left:6%;top:21.5%">
-      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
-      <img class="portrait" alt="Fun team photo" style="width:94%;height:auto;top:20px;left:50%;margin-left:-46.5%;outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\processTeam.jpg"/></img>
+      <img class="portrait" alt="Fun photo of Team Dot Dot Dot" style="width:94%;height:auto;top:20px;left:50%;margin-left:-46.5%;outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\processTeam.jpg"/></img>
     </div>
 
     <div class="dotdotdot" style="top:59%;left:50%;margin-left:-55px">
@@ -86,7 +85,7 @@
       <a style="text-decoration:none" class="btn" href="https://maiam6242.github.io/braille-printer/sprint4.html">sprint 4!</a>
     </div>
 
-    <a style="text-decoration:none;position:absolute;top:79%;left:50%;margin-left:-110px" class="btn" href="#">budget!</a>
+    <a style="text-decoration:none;position:absolute;top:79%;left:50%;margin-left:-110px" class="btn" href="https://maiam6242.github.io/braille-printer/budget.html">budget!</a>
 
     <div style="width:1000px;left:50%;margin-left:-500px">
       <div class="Layer_1 aiAbs aiPointText" style="top:1289px;margin-top:-17.5px;left:9.4243%;width:81px;">
