--- a/sprint1.html
+++ b/sprint1.html
@@ -21,10 +21,9 @@
     </a>
 
 		<div class="circle400 blue2" style="right:3%;top:3.85%"></div>
-    <div class="circle300 blue3" style="right:3%;top:6.8%"></div>
-    <div class="circle150 blue1" style="left:44.8%;top:9.3%"></div>
+    <div class="circle300 blue3" style="right:3%;top:8.8%"></div>
+    <div class="circle150 blue1" style="left:52.8%;top:10.3%"></div>
 		<div class="aiAbs" style="align:center;height:5.8%;width:43%;right:6.6%;top:4.8%">
-			<!-- <div class="frame" style="height:100%;width:100%;"></div> -->
 			<img class="portrait" alt="Sprint 1 Team Picture" style="width:80%;height:auto;top:25px;right:50%;margin-right:-46.5%;outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\sprint1Team.jpg"/></img>
 		</div>
 
@@ -40,8 +39,7 @@
 		<div class="circle400 blue2" style="left:3%;top:20%"></div>
 		<div class="circle150 blue1" style="right:46%;top:20%"></div>
 		<div class="aiAbs" style="align:center;height:5.8%;width:43%;left:6.6%;top:21%">
-			<!-- <div class="frame" style="height:100%;width:100%;"></div> -->
-			<img class="portrait" alt="Sprint 1 Team Picture" style="width:70%;height:auto;top:25px;right:50%;margin-right:-46.5%;outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\sprint1Circuit.png"/></img>
+			<img class="portrait" alt="Schematic for powering a single solenoid" style="width:70%;height:auto;top:25px;right:50%;margin-right:-46.5%;outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\sprint1Circuit.png"/></img>
 		</div>
 
 		<div class="dotdotdot" style="top:34.5%;left:50%;margin-left:-55px">
@@ -54,9 +52,8 @@
 
 		<div class="circle400 blue2" style="right:3%;top:38%"></div>
     <div class="circle300 blue3" style="right:3%;top:35.7%"></div>
-    <div class="circle150 blue1" style="left:49%;top:41.7%"></div>
-		<div class="aiAbs" style="align:center;height:5.8%;width:43%;right:6.6%;top:35%">
-			<!-- <div class="frame" style="height:100%;width:100%;"></div> -->
+    <div class="circle150 blue1" style="left:55%;top:41.7%"></div>
+		<div class="aiAbs" style="align:center;height:5.8%;width:43%;right:6.6%;top:36.5%">
 			<img class="portrait" alt="Aluminum dimple press prototype" style="width:45%;height:auto;top:25px;right:50%;margin-right:-25%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\sprint1Puncher.png"/></img>
 		</div>
 
@@ -68,7 +65,7 @@
       <div class="dot"></div>
     </div>
 
-		<div class="dotdotdot" style="top:65.4%;left:50%;margin-left:-55px">
+		<div class="dotdotdot" style="top:64.4%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -80,7 +77,6 @@
 		<div class="circle400 blue2" style="right:3%;top:67.1%"></div>
 		<div class="circle150 blue1" style="left:46%;top:67.1%"></div>
 		<div class="aiAbs" style="align:center;height:5.8%;width:43%;right:6.6%;top:67.1%">
-			<!-- <div class="frame" style="height:100%;width:100%;"></div> -->
 			<img class="portrait" alt="Whiteboard with initial brainstorm" style="width:80%;height:auto;top:25px;right:50%;margin-right:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\sprint1Whiteboard.JPG"/></img>
 		</div>
 
@@ -159,7 +155,7 @@
 			<p>&nbsp;</p>
 			<p class="pstyle5">This sprint, we focused on defining our team goals and guidelines as well as researching the outside-of-school meaning of this project.</p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:77.485%;left:9.7185%;width:80.5302%;">
+		<div class="Layer_1 aiAbs" style="top:76.585%;left:9.7185%;width:80.5302%;">
 			<p class="pstyle6">To do this, we first shared our personal learning goals with one another&ndash; Meg&rsquo;s goal was to figure out her major, Colin&rsquo;s goal was to learn more about integration, Nathan&rsquo;s goal was to do things beyond just mechanical design, Maia&rsquo;s goal was to learn to manage cross-disciplinary teams, and Annie&rsquo;s goal was to learn something new. Next, we established our project goal: make a high-quality, technically challenging, and meaningful product that also fulfills our personal learning goals. We also expectations for deadlines, commitments, and communication.</p>
 			<p>&nbsp;</p>
 			<p class="pstyle6">To research the external applications of our project, we contacted professor Caitrin Lynch, and she gave us a bunch of contacts in the assistive tech realm to contact (thanks Caitrin!). We ended up calling and exchanging emails with several Olin alumni and a contact at The Carroll Center for the Blind, who directed us to even more people and resources (thanks Bruce!)</p>
