--- a/sprint2.html
+++ b/sprint2.html
@@ -24,7 +24,6 @@
     <div class="circle300 blue3" style="right:3%;top:6.8%"></div>
     <div class="circle150 blue1" style="left:50.8%;top:9.3%"></div>
     <div class="aiAbs" style="height:350px; width:530px; right:6%;top:4.8%">
-      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
       <img class="portrait" alt="Some of the team in action in Colin and Nathan's room" style="width:94%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\sprint2working.jpg"/></img>
     </div>
 
@@ -40,9 +39,7 @@
 		<div class="circle400 blue2" style="left:23%;top:20.8%"></div>
 		<div class="circle150 blue1" style="right:26%;top:20.8%"></div>
     <div class="aiAbs" style="height:350px; width:530px; right:32%;top:21.8%">
-      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
-	  <!-- <img class="portrait" alt="PCB diagram as of sprint 2" style="width:94%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\sprint2PCB.png"/></img> -->
-	  <img class="portrait" alt="Sprint 1 PCB" style="width:94%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\sprint2PCB.png"/></img>
+	  <img class="portrait" alt="Circuit diagram of our PCB as of sprint 2" style="width:94%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\sprint2PCB.png"/></img>
 
     </div>
 
@@ -58,8 +55,7 @@
     <div class="circle300 blue3" style="right:23%;top:41%"></div>
     <div class="circle150 blue1" style="left:29%;top:47%"></div>
     <div class="aiAbs" style="height:350px; width:530px; left:32%;top:42.3%">
-      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
-      <img class="portrait" alt="Mechanical assembly as of sprint 2" style="width:94%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\sprint2mechanical.jpg"/></img>
+      <img class="portrait" alt="Mechanical assembly of the printer as of sprint 2" style="width:94%;height:auto;top:20px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\sprint2mechanical.jpg"/></img>
     </div>
 
 		<div class="dotdotdot" style="top:59.5%;left:50%;margin-left:-55px">
