--- a/sprint3.html
+++ b/sprint3.html
@@ -25,7 +25,7 @@
     <div class="circle150 blue1" style="left:50.8%;top:10.3%"></div>
     <div class="aiAbs" style="height:350px; width:530px; right:6%;top:5.8%">
       <div class="frame" style="height:100%;width:100%;"></div>
-      <img class="portrait" alt="Some of the team in action in Colin and Nathan's room" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\sprint3Team.jpg"/></img>
+      <img class="portrait" alt="Some of the team working on the project in the Principles of Engineering classroom" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\sprint3Team.jpg"/></img>
     </div>
 
 		<div class="dotdotdot" style="top:23.9%;left:50%;margin-left:-55px">
@@ -41,7 +41,7 @@
 		<div class="circle150 blue1" style="right:26%;top:26.8%"></div>
     <div class="aiAbs" style="height:350px; width:530px; right:32%;top:27.8%">
       <div class="frame" style="height:100%;width:100%;"></div>
-      <img class="portrait" alt="PCB diagram as of sprint 2" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\sprint3PCB.jpg"/></img>
+      <img class="portrait" alt="Final printed and populated PCB" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\sprint3PCB.jpg"/></img>
     </div>
 
 		<div class="dotdotdot" style="top:44.5%;left:50%;margin-left:-55px">
@@ -57,7 +57,7 @@
     <div class="circle150 blue1" style="left:29%;top:53%"></div>
     <div class="aiAbs" style="height:350px; width:530px; left:32%;top:47.3%">
       <div class="frame" style="height:100%;width:100%;"></div>
-      <img class="portrait" alt="Mechanical assembly as of sprint 2" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\sprint2mechanical.jpg"/></img>
+      <img class="portrait" alt="Bank of mounted solenoids" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\mechanicalSolenoids.jpg"/></img>
     </div>
 
 		<div class="dotdotdot" style="top:65.3%;left:50%;margin-left:-55px">
