--- a/sprint4.html
+++ b/sprint4.html
@@ -25,7 +25,7 @@
     <div class="circle150 blue1" style="left:50.8%;top:10.3%"></div>
     <div class="aiAbs" style="height:350px; width:530px; right:6%;top:5.8%">
       <div class="frame" style="height:100%;width:100%;"></div>
-      <img class="portrait" alt="The Portabraille Printer" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\sprint4main.jpg"/></img>
+      <img class="portrait" alt="Up-close view of the Portabraille Printer" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\sprint4main.jpg"/></img>
     </div>
 
 		<div class="dotdotdot" style="top:21.2%;left:50%;margin-left:-55px">
@@ -41,7 +41,7 @@
 		<div class="circle150 blue1" style="right:26%;top:23.8%"></div>
     <div class="aiAbs" style="height:350px; width:530px; right:32%;top:24.8%">
       <div class="frame" style="height:100%;width:100%;"></div>
-      <img class="portrait" alt="Final PCB!" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\sprint4PCB.jpg"/></img>
+      <img class="portrait" alt="Our PCB, mounted and in action" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\sprint4PCB.jpg"/></img>
     </div>
 
 		<div class="dotdotdot" style="top:42%;left:50%;margin-left:-55px">
@@ -57,7 +57,7 @@
     <div class="circle150 blue1" style="left:29%;top:49%"></div>
     <div class="aiAbs" style="height:350px; width:530px; left:32%;top:45.3%">
       <div class="frame" style="height:100%;width:100%;"></div>
-      <img class="portrait" alt="Computer rendering of the portabraille printer" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\mechanicalRender.png"/></img>
+      <img class="portrait" alt="Computer rendering of the Portabraille Printer" style="width:94%;height:91%;top:20px;left:50%;margin-left:-46.5%" src="Website Graphics\mechanicalRender.png"/></img>
     </div>
 
 		<div class="dotdotdot" style="top:65%;left:50%;margin-left:-55px">
