--- a/system.html
+++ b/system.html
@@ -28,8 +28,8 @@
       <div class="dot"></div>
     </div>
 
-    <img class="portrait" alt="The Portabraille Printer!" style="width:60%;height:auto;top:20%;left:50%;margin-left:-30%; outline:0.5vw solid black; outline-offset: 1vw;" src="systemOverview.png"/></img>
-    
+    <img class="portrait" alt="System diagram of the Portabraille Printer!" style="width:60%;height:auto;top:20%;left:50%;margin-left:-30%; outline:0.5vw solid black; outline-offset: 1vw;" src="systemOverview.png"/></img>
+
     <div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:860px;width:81px;">
 			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/instructions.html">instructions</a>
 		</div>
@@ -68,7 +68,7 @@
       <p class="pstyle0">the Portabraille Printer!</p>
 		</div>
 
-    <div class="Layer_1 aiAbs" style="top:70.5725%;left:50.0044%;margin-left:-36.2055%;width:72.4109%;">
+    <div class="Layer_1 aiAbs" style="top:73.5725%;left:50.0044%;margin-left:-36.2055%;width:72.4109%;">
       <p class="pstyle1">The Portabraille Printer is a device that takes in an English text input, translates that text into uncontracted braille, then prints said braille text on braille paper. It is a low cost product that aims to allow people who are visually impaired to create braille quickly, with applications ranging from producing quick meeting notes to creating accessible promotional materials on the fly. The printer is light, with handles for easy transportation, and has an easy-to-use interface with both braille and English text, creating a user friendly experience for those who are visually impaired or blind. Text documents can be fed to the printer via either the Portabraille Portal on the Portabraille Network or by plugging in a USB.</p>
     </div>
 
