--- a/electrical.html
+++ b/electrical.html
@@ -33,7 +33,7 @@
     <div class="circle675 blue2" style="left:10%;top:21%"></div>
     <div class="aiAbs" style="align:center;height:550px;width:880px;left:50%;margin-left:-440px;top:23%">
       <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
-      <img class="portrait" alt="Portabraille Interface" style="width:90%;height:auto;top:30px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\electricalfinaldiagram.png"/></img>
+      <img class="portrait" alt="The final circuit diagram for the PCB" style="width:90%;height:auto;top:30px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\electricalfinaldiagram.png"/></img>
     </div>
 
     <div class="circle450 blue3" style="right:55%;top:51%"></div>
@@ -41,7 +41,7 @@
     <div class="circle675 blue2" style="right:10%;top:43%"></div>
     <div class="aiAbs" style="align:center;height:550px;width:880px;left:50%;margin-left:-440px;top:45%">
       <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
-      <img class="portrait" alt="Portabraille printing" style="width:75%;height:auto;top:30px;left:50%;margin-left:-37.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\electricalfinaltrace.PNG"/></img>
+      <img class="portrait" alt="The final layout for the PCB" style="width:75%;height:auto;top:30px;left:50%;margin-left:-37.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\electricalfinaltrace.PNG"/></img>
     </div>
 
     <div class="circle450 blue3" style="left:55%;top:80%"></div>
@@ -49,7 +49,7 @@
     <div class="circle675 blue2" style="left:10%;top:73%"></div>
     <div class="aiAbs" style="align:center;height:550px;width:880px;left:50%;margin-left:-300px;top:78%">
       <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
-      <img class="portrait" alt="Interface circuit diagram" style="width:60%;height:auto;top:30px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\electricalinterfacediagram.png"/></img>
+      <img class="portrait" alt="The final circuit diagram for the interface board" style="width:60%;height:auto;top:30px;left:50%;margin-left:-46.5%; outline:0.5vw solid black; outline-offset: 1vw;" src="Website Graphics\electricalinterfacediagram.png"/></img>
     </div>
 
     <div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:860px;width:81px;">
