--- a/team.html
+++ b/team.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 
 <head>
@@ -10,14 +9,12 @@
     <title>Portabraille Printer!</title>
 </head>
 
-
 <div id="team-box" class="ai2html" style="width:100%">
-	<div id="team" class="artboard" style="max-width:100%;max-height: 3672px" data-aspect-ratio="0.329" data-min-width="0">
-￼
-		<div class="header blue1"></div>
+	<div id="team" style="max-width:100%;max-height:3672px" data-aspect-ratio="0.329" data-min-width="0">
+
+    <div class="header blue1"></div>
 		<div style="padding: 0 0 3410px 0;"></div>
 		<div class="footer blue1"> </div>
-    <div class="circle175 blue1" style="left:28.5%;top:20%"></div>
 
 		<a href="https://maiam6242.github.io/braille-printer/">
 				<img class="logo" alt="Portabraille Printer Logo" src="Website Graphics\Logo.png"/>
@@ -27,45 +24,40 @@
     <div class="circle150 blue1" style="left:3%;top:6%"></div>
     <div class="circle450 blue2" style="left:20%;top:6%"></div>
     <div class="aiAbs" style="align:center;height:11%;width:48%;left:5%;top:7%">
-      <!-- <div class="frame" style="height:47vh;width:100%;"></div> -->
       <img class="portrait" alt="Team dot dot dot group photo" style="height:auto;width:93%;top:20px;left:50%;margin-left:-46%; outline:0.3vw solid black; outline-offset: 1vw;" src="Website Graphics\teamGroup.jpg"/></img>
     </div>
 
+    <div class="circle175 blue1" style="left:28.5%;top:20%"></div>
     <div class="circle350 blue2" style="left:4%;top:22.5%"></div>
     <div class="aiAbs" style="align:center;height:7.6%;width:28.5%;left:9%;top:21.8%">
-      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
       <img class="portrait" alt="Colin's Portrait" style="width:auto;height:89%;top:20px;left:50%;margin-left:-44.5%; outline:0.3vw solid black; outline-offset: 1vw;" src="Website Graphics\teamColin.jpg"/></img>
     </div>
 
     <div class="circle175 blue3" style="right:5%;top:20%"></div>
     <div class="circle350 blue1" style="right:20%;top:22.5%"></div>
     <div class="aiAbs" style="align:center;height:7.6%;width:28.5%;right:9%;top:21.8%">
-      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
       <img class="portrait" alt="Megan's Portrait" style="width:auto;height:89%;top:20px;right:50%;margin-right:-46.5%; outline:0.3vw solid black; outline-offset: 1vw;" src="Website Graphics\teamMegan.jpg"/></img>
     </div>
 
     <div class="circle175 blue2" style="left:28.5%;top:42%"></div>
     <div class="circle350 blue1" style="left:4%;top:44.5%"></div>
     <div class="aiAbs" style="align:center;height:7.6%;width:28.5%;left:9%;top:43.8%">
-      <!-- <div class="frame" style="height:100%;wicomdth:100%;"></div> -->
       <img class="portrait" alt="Nathan's Portrait" style="width:auto;height:89%;top:20px;left:50%;margin-left:-44.5%; outline:0.3vw solid black; outline-offset: 1vw;" src="Website Graphics\teamNathan.jpg"/></img>
     </div>
 
     <div class="circle175 blue1" style="right:5%;top:42%"></div>
     <div class="circle350 blue3" style="right:20%;top:44.5%"></div>
     <div class="aiAbs" style="align:center;height:7.6%;width:28.5%;right:9%;top:43.8%">
-      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
-      <img class="portrait" alt="Megan's Portrait" style="width:auto;height:89%;top:20px;right:50%;margin-right:-46.5%; outline:0.3vw solid black; outline-offset: 1vw;" src="Website Graphics\teamMaia.jpg"/></img>
+      <img class="portrait" alt="Maia's Portrait" style="width:auto;height:89%;top:20px;right:50%;margin-right:-46.5%; outline:0.3vw solid black; outline-offset: 1vw;" src="Website Graphics\teamMaia.jpg"/></img>
     </div>
 
     <div class="circle175 blue3" style="right:30%;top:64%"></div>
     <div class="circle350 blue2" style="left:28.5%;top:66.5%"></div>
     <div class="aiAbs" style="align:center;height:7.6%;width:28.5%;left:50%;margin-left:-14.25%;top:65.8%">
-      <!-- <div class="frame" style="height:100%;width:100%;"></div> -->
       <img class="portrait" alt="Annie's Portrait" style="width:auto;height:89%;top:20px;right:50%;margin-right:-46.5%; outline:0.3vw solid black; outline-offset: 1vw;" src="Website Graphics\teamAnnie.jpg"/></img>
     </div>
 
-    <div class="dotdotdot" style="top:87.5%;left:50%;margin-left:-55px">
+    <div class="dotdotdot" style="top:85.5%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -161,5 +153,3 @@
     </div>
 	</div>
 </div>
-
-<!-- End ai2html - 2019-12-06 12:18
